feat: allow to filter by source and batch ID as well
